# sigmaevolve

./: .gitignore  .vercelignore  PLAN.md  pyproject.toml  sample_policy.json
dashboard/: .env.example  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts  vitest.setup.ts  web-seo-metadata.json  web-seo-metadata.ts
dashboard/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
dashboard/app/api/tracks/: route.ts
dashboard/app/api/tracks/[trackId]/: route.ts
dashboard/app/api/tracks/[trackId]/stream/: route.ts
dashboard/app/api/tracks/[trackId]/trials/: route.ts
dashboard/app/tracks/[trackId]/: page.tsx
dashboard/components/: dashboard-shell.tsx  empty-state.tsx  highlighted-code.tsx  source-diff.tsx
dashboard/hooks/: use-track-live-updates.ts
dashboard/lib/: db.ts  mappers.ts  queries.ts  site.ts  sqlite.ts  sse.ts  types.ts
dashboard/public/brand/: manifest.json
dashboard/public/brand/web-seo/: site.webmanifest
dashboard/tests/: dashboard-shell.test.tsx  mappers.test.ts  sse.test.ts  use-track-live-updates.test.tsx
policies/: mnist_val_accuracy_60s_gemini_flash_lite.json
sigmaevolve/: __init__.py  baseline.py  cli.py  datasets.py  env.py  generation.py  hashing.py  modal_app.py  modal_support.py  models.py  orchestrator.py  runner.py  scoring.py  storage.py  strategy_runtime.py  system.py
tests/: conftest.py  test_cli.py  test_datasets.py  test_generation.py  test_hashing.py  test_modal_support.py  test_orchestration.py  test_runner.py  test_storage.py
(+1 files in other folders)
